Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4933

USB detection does not work on Mac OS X

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 2.3.0
    • Qt Creator 2.2.0
    • None
    • Mac OS X v. 10.6.7
      Symbian^3
    • ec97fc95a0baa7a27a56e2c4ab4e0cb523815a51

      SymbianUtils::SymbianDeviceManager::devices() and SymbianUtils::SymbianDeviceManager::instance()->getCodaDevice(port) will fail on Mac.
      When I try to acquire the connected device, I get the following message: "Attempt to acquire device '/dev/tty.usbmodem2624' that does not exist." And when I try to get the list of connected devices, the returned list is always empty.

      I made a dirty hack (see attachment) to SymbianDeviceManager::serialPorts() to verify the serial port problem. With the hack I managed to get the CodaDevice via SymbianDeviceManager and the devices() call also returns connected devices.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jaggernod Paweł Polański
            hlampela Henri Lampela (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes