USB management fix added to OS X

Task-number: QTCREATORBUG-4933

Change-Id: I03275344fbb85ce2bf3c83a8117075a8d45b12b5
Reviewed-on: http://codereview.qt.nokia.com/34
Reviewed-by: Paweł Polański <jaggernod@gmail.com>